--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,17 @@ $RECYCLE.BIN/
 */build/*
 
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
+
+# Ignore Python cache & temp files
+__pycache__/
+*.pyc
+
+# Ignore virtual environments
+.venv/
+venv/
+
+# Ignore Mac system file
+.DS_Store
+
+# Ignore PyCharm project config (optional)
+.idea/
